k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel
  labels:
    name: sentinel
    app: project-sentinel
